# rollplay

./: .dockerignore  .env.sentry-fix  .gitignore  AUDIO_IMPLEMENTATION_PLAN.md  CHARACTER_TAB_REDESIGN.md  CLAUDE.md  DASHBOARD_REDESIGN_PLAN.md  DDD_SESSION_REFACTOR.md  ENV_SENTRY_SETUP.md  GAME_STATE_MIGRATION_PLAN.md  JOINED_GAMES_IMPLEMENTATION_PLAN.md  LICENSE  MAP_SYSTEM_PLAN.md  MICROSERVICES_REFACTOR_PLAN.md  README.md  RULES_DND_2024.md  S3_ARCHITECTURE.md  S3_INTEGRATION.md  SECURITY.md  SENTRY_MULTI_PROJECT_SETUP.md  SENTRY_MULTI_SERVICE.md  SYNC_REFACTOR_PLAN.md  TASK-alembic-automation.md  TASK-websocket-events.md  TASK_ASI_SYSTEM.md  TASK_CHARACTER_CREATION.md  TASK_FRIENDS_SYSTEM.md  TESTING_GAME_LIFECYCLE.md  TODO.txt  USER_TESTING_2_TASKS.md  USER_TESTING_TASKS.md  all_requirements.txt  ddd_refactor.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  hot_cold_migration_plan.md  package-lock.json  postgres_user_system_plan.md  releases.json  (+5 more)
.claude-debriefs/: DEBRIEFING.md  normalize-jsonb-columns.md  shared-contracts-acl-pr1.md  shared-contracts-acl-pr2.md  shared-contracts-acl-pr3.md  web-bugs.md
.claude-plans/: DONEbgm-mixer-channel-strips.md  DONEgrid-tuning.md  DONEmobile-optimisations.md  DONEuser-id-identity-refactor.md  NEXTnormalize-jsonb-columns.md  PARTauthfetch-migration.md  (+55 more)
rollplay-shared-contracts/: pyproject.toml
rollplay-shared-contracts/shared_contracts/: __init__.py  assets.py  audio.py  base.py  character.py  cine.py  display.py  image.py  map.py  session.py
rollplay-shared-contracts/tests/: test_contracts.py
(+738 files in other folders)
