[project]
name = "rollplay-shared-contracts"
version = "0.1.0"
description = "Shared boundary schemas between Rollplay services"
requires-python = ">=3.9"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared_contracts*"]
